/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package com.example.lms.model;

/**
 *
 * @author Projects Lab
 */
public enum ContentType {
    VIDEO,
    DOCUMENT,
    QUIZ,
    ARTICLE
}
